--- a/package.json
+++ b/package.json
@@ -7,13 +7,37 @@
   "license": "MIT",
   "scripts": {
     "start": "NODE_ENV=local node src/server",
+    "start-production": "NODE_ENV=production node src/server",
     "test": "NODE_ENV=test node src/server"
   },
+  "devDependencies": {
+    "@types/catbox-redis": "^4.1.1",
+    "@types/dotenv": "^6.1.0",
+    "@types/ejs": "^2.6.3",
+    "@types/handlebars": "^4.1.0",
+    "@types/hapi": "^18.0.1",
+    "@types/hapi-pino": "^5.2.0",
+    "@types/bell": "^9.3.2",
+    "@types/hapi-auth-cookie": "^9.1.0",
+    "@types/hoek": "^4.1.3",
+    "@types/inert": "^5.1.2",
+    "@types/mongoose": "^5.3.21",
+    "@types/vision": "^5.3.6"
+  },
   "dependencies": {
+    "bell": "^10.0.0",
+    "catbox-redis": "^4.2.4",
+    "dotenv": "^6.2.0",
+    "ejs": "^2.6.1",
+    "handlebars": "^4.1.0",
     "hapi": "^18.1.0",
+    "hapi-auth-cookie": "^9.1.0",
     "hapi-pino": "^5.4.1",
+    "hoek": "^6.1.2",
     "inert": "^5.1.2",
     "joi": "^14.3.1",
-    "mongoose": "^5.4.17"
+    "mongoose": "^5.4.17",
+    "pug": "^2.0.3",
+    "vision": "^5.4.4"
   }
 }
